--- a/business.html
+++ b/business.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Business Relocation|PAM Consulting</title>
-    <link rel="icon" href="./images/logo-min.png">
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/fonts.css" />
+    <link rel="icon" href="./images/logo-min.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/grid.css" />
     <link rel="stylesheet" href="./styles/app.css" />
-    <link rel="stylesheet" href="./styles/responsive.css" />
   </head>
   <body>
     <header class="header">
@@ -30,14 +27,16 @@
             />
           </div>
           <ul class="nav-list">
-            <li class="nav-list__item active-link">
-              <a class="nav-list__link" href="#">Home</a>
+            <li class="nav-list__item">
+              <a class="nav-list__link" href="./index.html">Home</a>
             </li>
             <li class="nav-list__item">
               <a class="nav-list__link" href="./about.html">About us</a>
             </li>
-            <li class="nav-list__item" data-dropdown>
-              <a class="nav-list__link" data-dropdown-menu href="#">Services</a>
+            <li class="nav-list__item dropdown" data-dropdown>
+              <a class="nav-list__link active-link" data-dropdown-menu href="#"
+                >Services</a
+              >
               <svg
                 class="nav-list__dropdown"
                 data-dropdown-menu
@@ -50,26 +49,34 @@
               </svg>
               <ul class="service-menu">
                 <li class="service-menu__item">
-                  <a href="#" class="service-menu__link"
+                  <a href="./investment.html" class="service-menu__link"
                     >Investments opportunities</a
                   >
                 </li>
                 <li class="service-menu__item">
-                  <a href="#" class="service-menu__link">Business relocation</a>
+                  <a href="#" class="service-menu__link active-link"
+                    >Business relocation</a
+                  >
                 </li>
                 <li class="service-menu__item">
-                  <a href="#" class="service-menu__link">Family relocation</a>
+                  <a href="./family.html" class="service-menu__link"
+                    >Family relocation</a
+                  >
                 </li>
               </ul>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#">Invest in cyprus</a>
+              <a class="nav-list__link" href="./investment.html"
+                >Invest in cyprus</a
+              >
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#">migration</a>
+              <a class="nav-list__link" href="./migration.html">migration</a>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#">Contuct us</a>
+              <a class="nav-list__link" href="./business.html#contact"
+                >Contuct us</a
+              >
             </li>
           </ul>
           <a href="#" class="nav__button btn">Get in touch</a>
@@ -107,7 +114,9 @@
                 business-friendly environment is the result of effective
                 business initiatives taken by the government which focus on
                 providing a variety of benefits to people moving from abroad.
-                <span class="first-content__list-title content__list-title first-content__list-span">
+                <span
+                  class="first-content__list-title content__list-title first-content__list-span"
+                >
                   Among the multitude of reasons why Cyprus is the ideal place
                   to relocate your business are the following:
                 </span>
@@ -157,7 +166,9 @@
 
       <section class="second-row-content-wrapper row-content-wrapper">
         <div class="container">
-          <div class="second-content-row content-row second-business-content-row">
+          <div
+            class="second-content-row content-row second-business-content-row"
+          >
             <div class="second-content__image content__image">
               <img
                 src="./images/sub-offer/business-2-min.jpg"
@@ -232,7 +243,16 @@
                 Positive Economic Outlook
               </h2>
               <p class="third-content__description content__description">
-                The decision to relocate your business comes with the need to discover a location with a strong and promising economic future for your business. Cyprus has established its resilient economic reputation with one of the fastest growth rates in the EU. This is achieved by focusing on the diversification of services and business opportunities found on the island. Some of the most dominant services include communications, real estate, and financial industries. The government’s efforts to support businesses has proved fundamental in the growth of the economy.              </p>
+                The decision to relocate your business comes with the need to
+                discover a location with a strong and promising economic future
+                for your business. Cyprus has established its resilient economic
+                reputation with one of the fastest growth rates in the EU. This
+                is achieved by focusing on the diversification of services and
+                business opportunities found on the island. Some of the most
+                dominant services include communications, real estate, and
+                financial industries. The government’s efforts to support
+                businesses has proved fundamental in the growth of the economy.
+              </p>
               <ul class="third-list sub-page-list">
                 <li class="third-list__item sub-page-list__item">
                   Robust GDP growth
@@ -244,14 +264,20 @@
                   Positive macroeconomic forecasts
                 </li>
                 <li class="third-list__item sub-page-list__item">
-                  Key focus on investing in interconnectivity in the following years
+                  Key focus on investing in interconnectivity in the following
+                  years
                 </li>
                 <li class="third-list__item sub-page-list__item">
-                  Exceptional Regulatory Structure: closely aligned to the English common law legal system
+                  Exceptional Regulatory Structure: closely aligned to the
+                  English common law legal system
                 </li>
               </ul>
               <p class="third-content__text content__text">
-                Since the 1st of January 2022, the Government of Cyprus has launched a new action plan to attract foreign businesses to Cyprus for the purpose of creating or expanding their operations. This creates unlimited possibilities when it comes to growing your business in Cyprus.
+                Since the 1st of January 2022, the Government of Cyprus has
+                launched a new action plan to attract foreign businesses to
+                Cyprus for the purpose of creating or expanding their
+                operations. This creates unlimited possibilities when it comes
+                to growing your business in Cyprus.
               </p>
             </div>
             <div class="third-content__image content__image">
