--- a/investment.html
+++ b/investment.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Investment|PAM Consulting</title>
-    <link rel="icon" href="./images/logo-min.png">
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/fonts.css" />
+    <link rel="icon" href="./images/logo-min.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/grid.css" />
     <link rel="stylesheet" href="./styles/app.css" />
-    <link rel="stylesheet" href="./styles/responsive.css" />
   </head>
   <body>
     <header class="header">
@@ -30,13 +27,13 @@
             />
           </div>
           <ul class="nav-list">
-            <li class="nav-list__item active-link">
-              <a class="nav-list__link" href="#">Home</a>
+            <li class="nav-list__item">
+              <a class="nav-list__link" href="./index.html">Home</a>
             </li>
             <li class="nav-list__item">
               <a class="nav-list__link" href="./about.html">About us</a>
             </li>
-            <li class="nav-list__item" data-dropdown>
+            <li class="nav-list__item dropdown" data-dropdown>
               <a class="nav-list__link" data-dropdown-menu href="#">Services</a>
               <svg
                 class="nav-list__dropdown"
@@ -50,15 +47,25 @@
               </svg>
               <ul class="service-menu">
                 <li class="service-menu__item">
-                  <a href="#" class="service-menu__link"
+                  <a
+                    href="#"
+                    class="service-menu__link nav-list__link active-link"
                     >Investments opportunities</a
                   >
                 </li>
                 <li class="service-menu__item">
-                  <a href="#" class="service-menu__link">invest relocation</a>
+                  <a
+                    href="./business.html"
+                    class="service-menu__link nav-list__link"
+                    >Business relocation</a
+                  >
                 </li>
                 <li class="service-menu__item">
-                  <a href="#" class="service-menu__link">Family relocation</a>
+                  <a
+                    href="./family.html"
+                    class="service-menu__link nav-list__link"
+                    >Family relocation</a
+                  >
                 </li>
               </ul>
             </li>
@@ -66,10 +73,15 @@
               <a class="nav-list__link" href="#">Invest in cyprus</a>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#">migration</a>
+              <a class="nav-list__link" href="./migration.html">migration</a>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#">Contuct us</a>
+              <a
+                class="nav-list__link"
+                href="#contact"
+                style="scroll-behavior: smooth"
+                >Contuct us</a
+              >
             </li>
           </ul>
           <a href="#" class="nav__button btn">Get in touch</a>
@@ -99,15 +111,17 @@
               <p class="first-content__description content__description">
                 Apart from being one of the most attractive holiday destinations
                 globally, Cyprus is also recognized as an ever-growing hub for
-                invest in the EU. Every year, entrepreneurs from all around
-                the world are moving to Cyprus with the aim to maximize their
-                invest efforts and opportunities. Every big city on the island
-                – Nicosia, Limassol, Paphos, and Larnaca – has something to
-                offer to every ambition-driven individual. This
-                invest-friendly environment is the result of effective
-                invest initiatives taken by the government which focus on
-                providing a variety of benefits to people moving from abroad.
-                <span class="first-content__list-title content__list-title first-content__list-span">
+                invest in the EU. Every year, entrepreneurs from all around the
+                world are moving to Cyprus with the aim to maximize their invest
+                efforts and opportunities. Every big city on the island –
+                Nicosia, Limassol, Paphos, and Larnaca – has something to offer
+                to every ambition-driven individual. This invest-friendly
+                environment is the result of effective invest initiatives taken
+                by the government which focus on providing a variety of benefits
+                to people moving from abroad.
+                <span
+                  class="first-content__list-title content__list-title first-content__list-span"
+                >
                   Among the multitude of reasons why Cyprus is the ideal place
                   to relocate your invest are the following:
                 </span>
@@ -140,8 +154,8 @@
               </ul>
               <p class="first-content__text content__text">
                 These benefits create an attractive and inviting invest
-                environment for those seeking to expand their investes in one
-                of the most dominant corporate locations of the world.
+                environment for those seeking to expand their investes in one of
+                the most dominant corporate locations of the world.
               </p>
             </div>
             <div class="first-content__image content__image">
@@ -174,21 +188,21 @@
                 holiday destination per year. This makes the island one of the
                 most popular destinations in the world. In fact, many people who
                 experience life in Cyprus tend to return either for another
-                holiday or decide to move permanently. As a invest
-                entrepreneur looking to relocate, the most essential point to
-                carefully consider is the new location of your invest
-                activities. This is why apart from the outstanding invest
-                advantages of Cyprus, you can also find the ideal location for
-                you and your employees to work and live. The cost of living is
-                lower than in most other EU countries High quality of living for
-                expatriates: there are thousands of expat communities around the
-                island Low crime rate: one of the safest countries to live
-                globally Exceptional healthcare facilities Among the world's top
-                retirement destinations One of the best state pension systems
-                worldwide A strong education sector with a wide range of public
-                and private higher education institutions. Choosing Cyprus is
-                more than just relocating your invest – it’s about starting a
-                new life built on quality and security.
+                holiday or decide to move permanently. As a invest entrepreneur
+                looking to relocate, the most essential point to carefully
+                consider is the new location of your invest activities. This is
+                why apart from the outstanding invest advantages of Cyprus, you
+                can also find the ideal location for you and your employees to
+                work and live. The cost of living is lower than in most other EU
+                countries High quality of living for expatriates: there are
+                thousands of expat communities around the island Low crime rate:
+                one of the safest countries to live globally Exceptional
+                healthcare facilities Among the world's top retirement
+                destinations One of the best state pension systems worldwide A
+                strong education sector with a wide range of public and private
+                higher education institutions. Choosing Cyprus is more than just
+                relocating your invest – it’s about starting a new life built on
+                quality and security.
               </p>
               <ul class="second-list sub-page-list">
                 <li class="second-list__item sub-page-list__item">
@@ -216,8 +230,8 @@
                 </li>
               </ul>
               <p class="second-content__text content__text">
-                Choosing Cyprus is more than just relocating your invest –
-                it’s about starting a new life built on quality and security.
+                Choosing Cyprus is more than just relocating your invest – it’s
+                about starting a new life built on quality and security.
               </p>
             </div>
           </div>
@@ -232,7 +246,16 @@
                 Starting a Business
               </h2>
               <p class="third-content__description content__description">
-                The decision to relocate your invest comes with the need to discover a location with a strong and promising economic future for your invest. Cyprus has established its resilient economic reputation with one of the fastest growth rates in the EU. This is achieved by focusing on the diversification of services and invest opportunities found on the island. Some of the most dominant services include communications, real estate, and financial industries. The government’s efforts to support investes has proved fundamental in the growth of the economy.              </p>
+                The decision to relocate your invest comes with the need to
+                discover a location with a strong and promising economic future
+                for your invest. Cyprus has established its resilient economic
+                reputation with one of the fastest growth rates in the EU. This
+                is achieved by focusing on the diversification of services and
+                invest opportunities found on the island. Some of the most
+                dominant services include communications, real estate, and
+                financial industries. The government’s efforts to support
+                investes has proved fundamental in the growth of the economy.
+              </p>
               <ul class="third-list sub-page-list">
                 <li class="third-list__item sub-page-list__item">
                   Robust GDP growth
@@ -244,14 +267,20 @@
                   Positive macroeconomic forecasts
                 </li>
                 <li class="third-list__item sub-page-list__item">
-                  Key focus on investing in interconnectivity in the following years
+                  Key focus on investing in interconnectivity in the following
+                  years
                 </li>
                 <li class="third-list__item sub-page-list__item">
-                  Exceptional Regulatory Structure: closely aligned to the English common law legal system
+                  Exceptional Regulatory Structure: closely aligned to the
+                  English common law legal system
                 </li>
               </ul>
               <p class="third-content__text content__text">
-                Since the 1st of January 2022, the Government of Cyprus has launched a new action plan to attract foreign investes to Cyprus for the purpose of creating or expanding their operations. This creates unlimited possibilities when it comes to growing your invest in Cyprus.
+                Since the 1st of January 2022, the Government of Cyprus has
+                launched a new action plan to attract foreign investes to Cyprus
+                for the purpose of creating or expanding their operations. This
+                creates unlimited possibilities when it comes to growing your
+                invest in Cyprus.
               </p>
             </div>
             <div class="third-content__image content__image">
@@ -279,7 +308,8 @@
                 </div>
                 <h4 class="process-item__title">We listen</h4>
                 <p class="process-item__caption">
-                  You come to us with your goals, and we make sure to understand your needs to the fullest.
+                  You come to us with your goals, and we make sure to understand
+                  your needs to the fullest.
                 </p>
               </div>
             </div>
@@ -349,7 +379,7 @@
         </div>
       </section>
 
-      <section class="contact-us">
+      <section id="contact" class="contact-us">
         <div class="container">
           <div class="contact">
             <div class="contact-text">
@@ -454,6 +484,7 @@
         </div>
       </section>
     </main>
+    
     <footer class="footer">
       <div class="container">
         <div class="footer-content">
