--- a/migration.html
+++ b/migration.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Migration|PAM Consulting</title>
     <link rel="icon" href="./images/logo-min.png" />
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/fonts.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/grid.css" />
     <link rel="stylesheet" href="./styles/app.css" />
-    <link rel="stylesheet" href="./styles/responsive.css" />
   </head>
   <body>
     <header class="header">
@@ -30,13 +27,13 @@
             />
           </div>
           <ul class="nav-list">
-            <li class="nav-list__item active-link">
-              <a class="nav-list__link" href="#">Home</a>
+            <li class="nav-list__item">
+              <a class="nav-list__link" href="./index.html">Home</a>
             </li>
             <li class="nav-list__item">
               <a class="nav-list__link" href="./about.html">About us</a>
             </li>
-            <li class="nav-list__item" data-dropdown>
+            <li class="nav-list__item dropdown" data-dropdown>
               <a class="nav-list__link" data-dropdown-menu href="#">Services</a>
               <svg
                 class="nav-list__dropdown"
@@ -50,26 +47,38 @@
               </svg>
               <ul class="service-menu">
                 <li class="service-menu__item">
-                  <a href="#" class="service-menu__link"
+                  <a
+                    href="./investment.html"
+                    class="service-menu__link nav-list__link"
                     >Investments opportunities</a
                   >
                 </li>
                 <li class="service-menu__item">
-                  <a href="#" class="service-menu__link">Business relocation</a>
+                  <a
+                    href="./business.html"
+                    class="service-menu__link nav-list__link"
+                    >Business relocation</a
+                  >
                 </li>
                 <li class="service-menu__item">
-                  <a href="#" class="service-menu__link">Family relocation</a>
+                  <a
+                    href="./family.html"
+                    class="service-menu__link nav-list__link"
+                    >Family relocation</a
+                  >
                 </li>
               </ul>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#">Invest in cyprus</a>
+              <a class="nav-list__link" href="./investment.html"
+                >Invest in cyprus</a
+              >
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#">migration</a>
+              <a class="nav-list__link active-link" href="#">migration</a>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#">Contuct us</a>
+              <a class="nav-list__link" href="#contact">Contuct us</a>
             </li>
           </ul>
           <a href="#" class="nav__button btn">Get in touch</a>
@@ -91,22 +100,24 @@
 
       <section class="first-row-content-wrapper row-content-wrapper">
         <div class="container">
-          <div class="first-content-row content-row first-migration-content-row">
+          <div
+            class="first-content-row content-row first-migration-content-row"
+          >
             <div class="first-content content first-migration-content">
               <h2 class="first-content__title content__title">
                 Permanent Residency in Cyprus Benefits
               </h2>
               <p class="first-content__description content__description">
                 When you make the decision to move to a different country with
-                your migration, you’re looking for the perfect place to call home.
-                Every person and every migration has their own perception of what
-                an ideal place to live looks like. While some people prefer to
-                live by the beach, others prefer the mountains. You may long to
-                live in a quiet little village, while others enjoy the bustling
-                life of the city. So, why do thousands of families choose Cyprus
-                as their ultimate destination? Because this island has it all!
-                Everything is in close proximity, enabling you to discover every
-                hidden aspect of the island.
+                your migration, you’re looking for the perfect place to call
+                home. Every person and every migration has their own perception
+                of what an ideal place to live looks like. While some people
+                prefer to live by the beach, others prefer the mountains. You
+                may long to live in a quiet little village, while others enjoy
+                the bustling life of the city. So, why do thousands of families
+                choose Cyprus as their ultimate destination? Because this island
+                has it all! Everything is in close proximity, enabling you to
+                discover every hidden aspect of the island.
               </p>
               <p class="first-content__list-title content__list-title">
                 The Cypriot lifestyle embraces people of all ages and
@@ -153,7 +164,9 @@
 
       <section class="second-row-content-wrapper row-content-wrapper">
         <div class="container">
-          <div class="second-content-row content-row second-migration-content-row">
+          <div
+            class="second-content-row content-row second-migration-content-row"
+          >
             <div class="second-content__image content__image">
               <img
                 src="./images/sub-offer/imigration2-min.jpg"
@@ -166,17 +179,17 @@
                 Why to Invest in Cyprus
               </h2>
               <p class="second-content__description content__description">
-                Your most prominent priority when relocating your migration is that
-                your children’s quality of life will only get better once you
-                move and settle down. The process of moving is challenging for
-                anyone, and this is especially true when it comes to children
-                who need to adapt to a new way of life. The migration-oriented
-                environment of Cyprus makes this process much more enjoyable.
-                With a huge variety of activities and experiences, children of
-                all ages can discover new hobbies and skills. The diverse
-                cultural community is also a chance for children to understand
-                the world and cultivate their minds to become accepting towards
-                people from all around the world.
+                Your most prominent priority when relocating your migration is
+                that your children’s quality of life will only get better once
+                you move and settle down. The process of moving is challenging
+                for anyone, and this is especially true when it comes to
+                children who need to adapt to a new way of life. The
+                migration-oriented environment of Cyprus makes this process much
+                more enjoyable. With a huge variety of activities and
+                experiences, children of all ages can discover new hobbies and
+                skills. The diverse cultural community is also a chance for
+                children to understand the world and cultivate their minds to
+                become accepting towards people from all around the world.
               </p>
               <ul class="second-list sub-page-list">
                 <li class="second-list__item sub-page-list__item">
@@ -211,7 +224,9 @@
 
       <section class="third-row-content-wrapper row-content-wrapper">
         <div class="container">
-          <div class="third-content-row content-row third-migration-content-row">
+          <div
+            class="third-content-row content-row third-migration-content-row"
+          >
             <div class="third-content content third-migration-content">
               <h2 class="third-content__title content__title">
                 Important Information to Know Before Immigrating to Cyprus
@@ -269,24 +284,31 @@
           <div class="migration-process-wrapper">
             <h2 class="process__title">How We Can Help</h2>
             <p class="migration-process__explain">
-              Leaving your home country to settle in another is always accompanied
-              by complex immigration processes such as registration, finding
-              housing, signing documents, opening a bank account, finding
-              schooling for your children, and much more. This process can make
-              anyone feel stressed and uncertain about the next move. For this
-              reason, our all-encompassing services make sure to make the
-              relocation process as smooth as possible by handling everything that
-              has to do with relocating your migration and your business to Cyprus.
+              Leaving your home country to settle in another is always
+              accompanied by complex immigration processes such as registration,
+              finding housing, signing documents, opening a bank account,
+              finding schooling for your children, and much more. This process
+              can make anyone feel stressed and uncertain about the next move.
+              For this reason, our all-encompassing services make sure to make
+              the relocation process as smooth as possible by handling
+              everything that has to do with relocating your migration and your
+              business to Cyprus.
             </p>
             <ul class="migration-list">
               <li class="migration-list__item">
-                <a href="#" class="migration-list__link">Business Relocation</a>
+                <a href="./business.html" class="migration-list__link"
+                  >Business Relocation</a
+                >
               </li>
               <li class="migration-list__item">
-                <a href="#" class="migration-list__link">Family Relocation</a>
+                <a href="./family.html" class="migration-list__link"
+                  >Family Relocation</a
+                >
               </li>
               <li class="migration-list__item">
-                <a href="#" class="migration-list__link">Investment Plans</a>
+                <a href="./investment.html" class="migration-list__link"
+                  >Investment Plans</a
+                >
               </li>
             </ul>
             <p class="migration-process__text">
@@ -294,12 +316,11 @@
               Cyprus, as we take care of the challenging parts of moving. Moving
               to Cyprus is in itself an investment in your future.
             </p>
-  
           </div>
         </div>
       </section>
 
-      <section class="contact-us">
+      <section class="contact-us" id="contact">
         <div class="container">
           <div class="contact">
             <div class="contact-text">
