--- a/family.html
+++ b/family.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Family Relocation|PAM Consulting</title>
     <link rel="icon" href="./images/logo-min.png">
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/fonts.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/grid.css" />
     <link rel="stylesheet" href="./styles/app.css" />
-    <link rel="stylesheet" href="./styles/responsive.css" />
   </head>
   <body>
     <header class="header">
@@ -30,14 +27,14 @@
             />
           </div>
           <ul class="nav-list">
-            <li class="nav-list__item active-link">
-              <a class="nav-list__link" href="#">Home</a>
+            <li class="nav-list__item">
+              <a class="nav-list__link" href="./index.html">Home</a>
             </li>
             <li class="nav-list__item">
               <a class="nav-list__link" href="./about.html">About us</a>
             </li>
-            <li class="nav-list__item" data-dropdown>
-              <a class="nav-list__link" data-dropdown-menu href="#">Services</a>
+            <li class="nav-list__item dropdown" data-dropdown>
+              <a class="nav-list__link active-link" data-dropdown-menu href="#">Services</a>
               <svg
                 class="nav-list__dropdown"
                 data-dropdown-menu
@@ -50,26 +47,26 @@
               </svg>
               <ul class="service-menu">
                 <li class="service-menu__item">
-                  <a href="#" class="service-menu__link"
+                  <a href="./investment.html" class="service-menu__link nav-list__link"
                     >Investments opportunities</a
                   >
                 </li>
                 <li class="service-menu__item">
-                  <a href="#" class="service-menu__link">Business relocation</a>
+                  <a href="./business.html" class="service-menu__link nav-list__link">Business relocation</a>
                 </li>
                 <li class="service-menu__item">
-                  <a href="#" class="service-menu__link">Family relocation</a>
+                  <a href="#" class="service-menu__link nav-list__link active-link">Family relocation</a>
                 </li>
               </ul>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#">Invest in cyprus</a>
+              <a class="nav-list__link" href="./investment.html">Invest in cyprus</a>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#">migration</a>
+              <a class="nav-list__link" href="./migration.html">migration</a>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#">Contuct us</a>
+              <a class="nav-list__link" href="#contact" style="scroll-behavior: smooth;">Contuct us</a>
             </li>
           </ul>
           <a href="#" class="nav__button btn">Get in touch</a>
@@ -349,7 +346,7 @@
         </div>
       </section>
 
-      <section class="contact-us">
+      <section id="contact" class="contact-us">
         <div class="container">
           <div class="contact">
             <div class="contact-text">
